packages/styles/src/components/button-group.scss
@forward './../variables/options';

@use './../lic/bootstrap-license';
@use './../themes/bootstrap/core' as *;
@use './../themes/bootstrap/button-group' as bg;

@use './../mixins/utilities';
@use './../variables/color';
@use './../variables/components/button';

.btn-group {
  max-width: 100%;

  > .btn {
    white-space: normal;
    cursor: pointer;

    // added a transition delay on the "z-index" so the button only moves back after all other transitions
    z-index: 0;
    transition: z-index 0s ease (0.5 * button.$btn-transition-duration), button.$btn-transition;

    @include utilities.high-contrast-mode() {
      transition: none !important;
    }
  }

  > .btn:hover {
    // remove the transition delay on the "z-index" for all raised states so the button moves forward before other transitions
    z-index: 2 !important;
    transition: button.$btn-transition;
  }

  > .btn-secondary {
    border-color: color.$gray-20;
  }

  > .btn-secondary.active,
  > .btn-check:checked + .btn-secondary {
    background-color: color.$yellow;

    @include utilities.high-contrast-mode() {
      background-color: Highlight;
    }
  }
}

